--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(my_str_library C)
 
 set(CMAKE_C_STANDARD 11)
 
-SET( my_lib_src my_library.c testing.c my_library.h)
+SET( my_lib_src my_library.c my_library.h)
 ADD_LIBRARY(my_str_library SHARED ${my_lib_src} )
